# task_sequencer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: adapters_usage.py  basic_usage.py  custom_tracker.py  etl_example.py  parameterized_task_example.py  sync_example.py
task_sequencer/: __init__.py  core.py  exceptions.py  interfaces.py  iterators.py  logging.py  progress.py  types.py  validators.py
task_sequencer/adapters/: __init__.py  memory.py  mongodb.py  mysql.py  postgresql.py
tests/: conftest.py  test_adapters.py  test_exceptions.py  test_imports.py  test_integration.py  test_interfaces.py  test_iterators.py  test_logging.py  test_orchestrator.py  test_parameterized_iterable_task.py  test_progress.py  test_progress_tracker.py  test_registry.py  test_transaction.py  test_validators.py
